updated some changes

--- a/components/auth/Login/LoginForm/LoginForm.module.scss
+++ b/components/auth/Login/LoginForm/LoginForm.module.scss
@@ -19,5 +19,9 @@ div {
       justify-content: center;
       align-items: center;
     }
+
+    .submit-btn {
+      margin-top: 1.5rem;
+    }
   }
 }
