--- a/components/Cards/Card/Card.module.scss
+++ b/components/Cards/Card/Card.module.scss
@@ -8,5 +8,9 @@ div {
     border-radius: 1.25rem;
     background: #fff;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+
+    @media (max-width: 40rem) {
+      box-shadow: none;
+    }
   }
 }
