--- a/styles/pages/gallery/Gallery.module.scss
+++ b/styles/pages/gallery/Gallery.module.scss
@@ -6,5 +6,14 @@
 section {
   &.section {
     font-family: Montserrat-medium;
+
+    .loading {
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.2rem;
+      font-family: montserrat-medium;
+    }
   }
 }
